[metadata]
name = wasupu-boinet-monitoring
version = 0.2.0
summary = Reporting tool for wasupu-boinet
description-file = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = Apache-2
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords = monitoring, cli, boinet

[options]
packages = find:
install_requires =
    terminaltables == 3

[tool:pytest]
testpaths = tests
python_files = *_test.py
python_functions = it_should_*
